[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/battle_hud.gd" id="1"]

[node name="BattleHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="PlayerPanel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = 250.0
offset_bottom = -10.0
grow_horizontal = 1
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="PlayerPanel/VBox"]
layout_mode = 2
text = "PLAYER"
horizontal_alignment = 1

[node name="PlayerHP" type="Label" parent="PlayerPanel/VBox"]
layout_mode = 2
text = "HP: 30/30"

[node name="PlayerMana" type="Label" parent="PlayerPanel/VBox"]
layout_mode = 2
text = "Mana: 0/0"

[node name="EnemyPanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="EnemyPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="EnemyPanel/VBox"]
layout_mode = 2
text = "ENEMY"
horizontal_alignment = 1

[node name="EnemyHP" type="Label" parent="EnemyPanel/VBox"]
layout_mode = 2
text = "HP: 30/30"

[node name="EnemyMana" type="Label" parent="EnemyPanel/VBox"]
layout_mode = 2
text = "Mana: 0/0"

[node name="TurnIndicator" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
text = "YOUR TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
text = "END TURN"

[node name="BattleLog" type="RichTextLabel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -250.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
scroll_following = true

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 70.0
grow_horizontal = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "RESTART"

[node name="CardDetailPopup" type="PanelContainer" parent="."]
visible = false
offset_left = 820.0
offset_top = 300.0
offset_right = 1080.0
offset_bottom = 460.0

[node name="VBox" type="VBoxContainer" parent="CardDetailPopup"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CardName" type="Label" parent="CardDetailPopup/VBox"]
layout_mode = 2
text = "Card Name"

[node name="CardCost" type="Label" parent="CardDetailPopup/VBox"]
layout_mode = 2
text = "Cost: 0"

[node name="CardStats" type="Label" parent="CardDetailPopup/VBox"]
layout_mode = 2
text = "ATK/HP: 0/0"

[node name="CardKeyword" type="Label" parent="CardDetailPopup/VBox"]
layout_mode = 2
text = "Keyword: None"

[node name="CardDescription" type="RichTextLabel" parent="CardDetailPopup/VBox"]
custom_minimum_size = Vector2(240, 72)
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "-"
